--- a/src/app/views/pages/score/registro-score/registro-score.component.html
+++ b/src/app/views/pages/score/registro-score/registro-score.component.html
@@ -33,8 +33,8 @@
               <label class="form-label">Fecha de Solcitud</label>
               <mat-form-field color="accent" appearance="outline">
                 <mat-date-range-input [rangePicker]="picker">
-                  <input matStartDate formControlName="fecha_solicitud_ini" >
-                  <input matEndDate   formControlName="fecha_solicitud_fin" >
+                  <input matStartDate formControlName="fecha_solicitud_ini" placeholder="Desde">
+                  <input matEndDate   formControlName="fecha_solicitud_fin" placeholder="Hasta">
                 </mat-date-range-input>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
@@ -83,7 +83,7 @@
 
         <div class="flex-1"></div>
         <div class="mt-2" style="color: #345df3; font-weight: 600;">
-          Total : <span class="total">{{ listaEventos.length }} Score</span>
+          Total : <span class="total">{{ listScore.length }} Score</span>
         </div>
       </div>
 
@@ -106,7 +106,7 @@
           </thead>
 
           <tbody>
-            <tr *ngFor="let score of listaEventos | paginate:
+            <tr *ngFor="let score of listScore | paginate:
                       { itemsPerPage: pageSize,
                         currentPage : page,
                         totalItems  : totalPersonal
@@ -116,8 +116,8 @@
 
                   <button matTooltip="Actualizar"
                   class="icon-btn btn-trans c-blue"
-                  (click)="actualizarPersonal(score)"
-                  ><mat-icon class="icon-13">settings_suggest</mat-icon>
+                  (click)="actualizarScore(score)"
+                  ><mat-icon class="icon-13">drive_file_rename_outline</mat-icon>
                 </button>
 
                   <button matTooltip ="Descargar"
@@ -144,7 +144,7 @@
         </div>
 
         <div
-          *ngIf="!loadingItem && listaEventos.length == 0"
+          *ngIf="!loadingItem && listScore.length == 0"
           class="cli-loader mt-5"
           style="color: #f83434"
           >No hay Score para mostrar
