--- a/src/assets/styles/Layout/header.scss
+++ b/src/assets/styles/Layout/header.scss
@@ -49,9 +49,9 @@
     align-items: center;
     border-radius: 50%;
     justify-content: center;
-    background-color: #00bcd4;
+    // background-color: #00bcd4;
 
-    // background-color: #033f58;
+    background-color: #bb96ff;
 
 
     color: #fff;
