--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -3,8 +3,9 @@
   color: $color-magenta;
 }
 .c-male {
-  // color: $color-blue;
-  color: #007bff
+  // color: #007bff
+  color: #bb96ff
+
 }
 
 .c-purple{
@@ -96,8 +97,13 @@
 .bgc-purple {
   background-color: $color-purple;
 }
+
+// .bgc-orange {
+//   background-color: $color-orange;
+// }
+
 .bgc-orange {
-  background-color: $color-orange;
+  background-color: #bb96ff;
 }
 
 .bgc-grey {
