--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .btn-logout {
-  border: solid 1px #00bcd4;
+  border: solid 1px #bb96ff;
   border-radius: 20px;
   margin: 0 5px;
   height: 30px;
