--- a/src/app/views/pages/home/home.component.scss
+++ b/src/app/views/pages/home/home.component.scss
@@ -43,7 +43,8 @@
   line-height: 5rem;
   font-family: "Webapp-Light";
   margin-bottom: 5%;
-  color: #02b3ca;
+  // color: #02b3ca;
+  color: #bb96ff;
 }
 
 .textcontent{
