--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
@@ -3,8 +3,9 @@
 .modal-title {
   font-size: 1.6rem;
   font-weight: 400;
-  // color: #00bec0;
-  color: $color-blue;
+  // color: $color-blue;
+  color: #bb96ff;
+
   margin: 4px 0;
   text-align: center;
 }
@@ -108,10 +109,24 @@
 
   color: #212529;
   // font-weight: 500;
-  border: solid 0.5px $color-blue;
+  border: solid 0.5px #bb96ff;
   border-radius: 4px;
   background: #f8f9fa;
   padding: 5px;
+}
+
+::ng-deep .mat-form-field {
+  // display: inline-block;
+  // position: relative;
+  text-align: center;
+}
+
+::ng-deep.mat-form-field-appearance-outline .mat-form-field-wrapper {
+  margin: 0.01em 0;
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
+  padding: 0em 0 0.5em 0;
 }
 
 @media (max-width: 768px) {
