--- a/src/assets/styles/buttons.scss
+++ b/src/assets/styles/buttons.scss
@@ -65,16 +65,45 @@
 .btn-cancel {
   background-color: #FFF;
   transition: ease 0.3s;
-  color: #bb96ff;
-  border: solid 1px #bb96ff;
+  color: #873eff;
+  border: solid 1px #873eff;
   &:hover:enabled {
     background-color: $color-grey-1;
   }
   &:hover:enabled:active {
-    background-color: #d0b7fe;
+    background-color: #ad8be4;
     color: #FFF;
   }
 }
+
+.btn-mail {
+  background-color: #FFF;
+  transition: ease 0.3s;
+  color: #20c997;
+  border: solid 1px #20c997;
+  &:hover:enabled {
+    background-color: $color-grey-1;
+  }
+  &:hover:enabled:active {
+    background-color: #65d4b3;
+    color: #FFF;
+  }
+}
+
+.btn-optional {
+  background-color: #FFF;
+  transition: ease 0.3s;
+  color: #0d6efd;
+  border: solid 1px #0d6efd;
+  &:hover:enabled {
+    background-color: $color-grey-1;
+  }
+  &:hover:enabled:active {
+    background-color: #71a6f6;
+    color: #FFF;
+  }
+}
+
 
 //Cambiar color para actualizacion masiva
 // .btn-cancel {
